# wasmio-2025-demos

./: Makefile  README.md
components/bubble-sorter/: index.js  package.json
components/bubble-sorter/wit/: world.wit
components/merge-sorter/: Cargo.toml
components/merge-sorter/src/: bindings.rs  lib.rs
live-demo/: Cargo.toml  plugged.wasm
live-demo/src/: bindings.rs  main.rs
live-demo/wit/: world.wit
live-demo2/: package-lock.json  package.json  spin.toml  tsconfig.json
live-demo2/@spin-deps/wasmio-demo/: index.js  package.json
live-demo2/@spin-deps/wasmio-demo/types/: test.d.ts
live-demo2/@spin-deps/wasmio-demo/types/interfaces/: wasmio-demo-sorting.d.ts
live-demo2/@spin-deps/wasmio-demo/wit/: world.wit
live-demo2/src/: index.ts
manual-composition-demo/: Cargo.toml
manual-composition-demo/src/: bindings.rs  main.rs
manual-composition-demo/wit/: world.wit
spin-deps-rust-demo/: Cargo.toml  spin.toml
spin-deps-rust-demo/src/: lib.rs
spin-deps-ts-demo/: package-lock.json  package.json  spin.toml
