[package]
name = "manual-composition-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.9.0"
wit-bindgen-rt = { version = "0.40.0", features = ["bitflags"] }

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "component:manual-composition-demo"

[package.metadata.component.dependencies]
